# FastMBAR

./: .gitignore  .readthedocs.yaml  .travis.yml  LICENSE  README.md  README.rst  build.sh  pyproject.toml  setup.py  setup_backup.py
.github/workflows/: python-publish.yml
FastMBAR/: FastMBAR.py  __init__.py  fastmbar.py  fastmbartools.py  test_FastMBAR.py  test_installation.py
FastMBAR/utils/: analyzer.py  fastmbartools.py
conda/: README.md  build.sh  meta.yaml
conda/conda_build/: .gitignore
docs/: requirements.txt
docs/source/: API.rst  butane_PMF.rst  conf.py  dialanine_PMF.rst  examples.rst  index.rst  installation.rst  references.rst  umbrella_sampling_1D.rst  umbrella_sampling_2D.rst  usage.rst
docs/source/_static/: logo.ai  logo.eps
examples/butane/: .gitignore
examples/butane/data/: butane.coor  butane.psf
examples/butane/output/: .gitignore  system.xml  theta0.csv
examples/butane/script/: collect_dihedral.py  compute_pmf_with_analyzer.py  compute_pmf_with_fastmbar.py  compute_pmf_with_nflows.py  main.ipynb  make_system.py  umbrella_sampling.py
examples/dialanine/: .gitignore
examples/dialanine/data/: dialanine.coor  dialanine.psf
examples/dialanine/output/: dialanine.coor  dialanine.psf  system.xml
examples/dialanine/output/traj/: traj_psi_0_phi_0.dcd
examples/dialanine/script/: analyze_umbrella_dialanine.py  compute_pmf_fastmbar.py  main.ipynb  make_psf.inp  make_system.py  run_umbrella_dialanine.py  umbrella_sampling.py  umbrella_sampling.spy
test/: test_FastMBAR.py
